k8s/myapp-ing-n/1-mai-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-ing
  namespace: mai-ns-ng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-ing
  template:
    metadata:
      labels:
        app: myapp-ing
    spec:
      containers:
        - name: myapp-ing
          image: aputra/myapp-195:v2
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
