k8s/myapp-ing-n/3-mai-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ing
  namespace: mai-ns-ng
spec:
  ingressClassName: external-nginx
  rules:
    - host: ex-nginx.rgkube.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-ing
                port:
                  number: 8080
